# homebrew-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  paths.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: database.rs  installer.rs  lib.rs  state.rs
crates/core/src/database/: migrations.rs  mod.rs  models.rs  queries.rs
crates/core/src/database/migrations/: 001_initial.sql
crates/fetcher/: Cargo.toml
crates/fetcher/src/: lib.rs
crates/formula/: Cargo.toml
crates/formula/src/: lib.rs  validation.rs
crates/solver/: Cargo.toml
crates/solver/benches/: resolver_bench.rs
crates/solver/src/: lib.rs  queue.rs  resolver.rs
crates/tap/: Cargo.toml
crates/tap/src/: cache.rs  lib.rs  manager.rs  persistence.rs  repository.rs
docs/: FORMULA_SPEC.md  ROADMAP.md  SAT_SOLVER_RESEARCH.md
docs/plans/: 2026-03-15-sat-solver-dependency-resolution.md
examples/: curl.toml  jq.toml  libssh2.toml  openssl.toml  simple.toml  zlib.toml
