[package]
name = "brew-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration and XDG directory management for brew-rs"

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
