[package]
name = "brew-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SAT-based dependency resolution for brew-rs"

[dependencies]
brew-formula = { path = "../formula" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
semver.workspace = true
tracing.workspace = true

varisat.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = { workspace = true }

[[bench]]
name = "resolver_bench"
harness = false
