[package]
name = "brew-tap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Git-based formula repository management for brew-rs"

[dependencies]
brew-config = { path = "../config" }
brew-formula = { path = "../formula" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Git operations
git2 = "0.18"

# Database for formula cache
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3.8"
